Fix macOS JVM args, rename artifactId, remove gson and save/load game